# Barebone-Qt

./: .gitignore  BRX_CAPABILITIES.md  CMakeLists.txt  README.md  index.html
agent/bricscad-learning/: brx-learning.json
agent/bricscad-workflows/: abfrage_aller_bim_objekte_im_aktuellen_raum_mit_kern_und_geometrieinformationen.json  abfrage_aller_geometrien_im_aktuellen_space.json  bim_geometrie_verschieben.json  bim_wandklassifikation_des_solids_b6.json  bim_wandklassifikation_eines_solids.json  geometrie_drehen.json  geometrie_loeschen.json  geometrie_loeschen_2.json  geometrie_verschieben.json  grundriss_und_aussenwaende_einzeichnen.json  kreis_geometrie_erstellen.json  kreis_geometrie_extrudieren.json  layer_erstellen.json  polyline_verschieben.json  polylinien_geometrie_erstellen.json  rechteck_geometrie_erstellen.json  rechteck_geometrie_extrudieren.json
agent/capabilities/: brx-tools.json
agent/contracts/: response-v2.json  router-bricscad-v1.json  router-general-v1.json  router-v1.json
agent/general-workflows/: bemessung_der_trinkwasserinstallation_nach_din_1988_300.json  formelsammlung_heizlastberechnung.json  heizlast_beispielrechnung.json  heizlast_formelsammlung.json  heizlastberechnung.json  heizlastberechnung_din_en_12831_detail.json  heizlastberechnung_nach_din_en_12831.json
agent/policies/: bricscad-safety.md  core.md  documents.md  general.md  geometry.md  layers.md
agent/workflows/: create_four_walls_and_extrude.json  create_layer_and_rectangle.json  create_tga_layers_heizung_sanitaer_lueftung.json  extrude_rectangles_to_bim_wall.json  move_and_rotate_solids_layer_0.json  rotate_solids_layer_0.json  select_and_move_solids_layer0.json  select_and_query_layer0_objects.json  select_rectangles_and_extrude_bimwall.json
macos/: build-app.sh  check-environment.sh  common.sh  package-artifact.sh
resources/: app.manifest  resources.qrc  windows.rc
src/: main.cpp
src/agent/: BricsCadLearningAgent.cpp  BricsCadLearningAgent.h  BrxAgent.cpp  BrxAgent.h  DrawingContextStore.cpp  DrawingContextStore.h  LocalAiJobScheduler.cpp  LocalAiJobScheduler.h
src/agent/bricscad/: BricsCadAgentCoordinator.cpp  BricsCadAgentCoordinator.h  BricsCadAgentUtils.cpp  BricsCadAgentUtils.h  BricsCadFinalAgent.cpp  BricsCadFinalAgent.h  CalculationAgent.cpp  CalculationAgent.h  ConversationHistoryAgent.cpp  ConversationHistoryAgent.h  DrawingContextAgent.cpp  DrawingContextAgent.h  LocalAiAgentRuntime.cpp  LocalAiAgentRuntime.h  ToolWorkflowAgent.cpp  ToolWorkflowAgent.h
src/bricscad/: BareboneBrxPlugin.cpp  BimTools.cpp  BimTools.h  BrxBimSdk.cpp  BrxBimSdk.h
src/core/: ConfigManager.cpp  ConfigManager.h
src/revit/: RevitAgent.cpp  RevitAgent.h
src/revit/bridge/Barebone.RevitBridge/: App.cs  Barebone.RevitBridge.csproj  BridgeClient.cs  BridgeExternalEventHandler.cs  BridgeLog.cs  BridgePaths.cs
src/ui/: AiWebBridge.cpp  AiWebBridge.h  BricsCadPage.cpp  BricsCadPage.h  ChatPage.cpp  ChatPage.h  MainWindow.cpp  MainWindow.h  RevitPage.cpp  RevitPage.h  SettingsPage.cpp  SettingsPage.h  TemplatePage.cpp  TemplatePage.h
tools/: check-ai-adapter-contract.ps1  check-bim-contract.ps1  check-bricscad-agent-pipeline.js  check-brx-capability-routing.ps1  check-index-javascript.js  check-katex-contract.ps1  check-revit-contract.ps1  test-ai-context-behavior.js  test-katex-runtime.js
windows/: build-app.ps1  check-environment.ps1  common.ps1  fix-embedded-manifest.ps1  install-revit-addin.ps1  package-artifact.ps1
